add statistics to gui
add statistics to gui